@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.401 2003-03-15 03:18:58 castaglia Exp $
+$Id: NEWS,v 1.402 2003-03-15 03:33:26 castaglia Exp $
 
 CVS
 ---------------------------------
@@ -53,7 +53,12 @@ CVS
   alter the --with-includes configure option used when building mod_sql.
 - Bug 1915 - Unsafe pointer usage in scoreboard file format.
 - Bug 1983 - Filenames beginning with '#' fail to upload/download.
-- Bug 1985 - mod_rewrite fails to build on platforms without flock()
+- Bug 1985 - mod_rewrite fails to build on platforms without flock().
+- Bug 1730 - mod_sql_mysql logging of long transfers fails.  This turned out
+  to be caused by the default MySQL timeouts on non-interactive sessions
+  (8 hours).  The fix involves marking mod_sql_mysql sessions as interactive;
+  this means that users may use the 'interactive-timeout' option in their
+  .cnf files to override the default interactive session timeout (also 8 hours).
 
 1.2.8 - Released 04-Mar-2003
 ---------------------------------
